Opened 18 years ago

Closed 18 years ago

#1191 closed bug (fixed)

Workspaces doesn't always redraw immediately

Reported by: humdinger Owned by: axeld
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

  • Start the Workspaces app.
  • Open a window, e.g. start a Terminal.
  • Change to another workspace.
  • Select "Hide all" of the app (here:Terminal) from the Deskbar.

-> Workspaces only redraws the inactive workspace after a mouse click. It should be immediately, just like when you do the same thing while being in the same workspace as the app (here:Terminal).

(BTW: The app "Workspaces" is missing from "Component - Applications" in the ticket system.)

Change History (2)

comment:1 by axeld, 18 years ago

Component: - ApplicationsServers/app_server

That's because Workspaces doesn't do a whole lot - most of its functionality sits in the app_server :-)

comment:2 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev21491.

Note: See TracTickets for help on using tickets.