The Workspaces layer will now also be updated when the window hidden/shown is not on the current workspace - this fixes bug #1191.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21491 a95241bf-73f2-0310-859d-f6bbb57e9c96